added print statement

--- a/MachineLearningAlgos.ipynb
+++ b/MachineLearningAlgos.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "MachineLearningAlgos.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOtp9W7xX/rNcha/TyVyTtV",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyP6Nqj3mvq/SdUbb0P+EE7O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,12 +31,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EdvIND7eQ-8S"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EdvIND7eQ-8S",
+        "outputId": "2b7cfab1-513c-4e2d-d60e-601aeda6fb48"
+      },
+      "source": [
+        "abcdefg = \"abcdefg\"\n",
+        "\n",
+        "print(abcdefg)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "abcdefg\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JetC8a28R4Hu"
       },
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     }
   ]
